--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "swr": "^2.2.5"
   },
