--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "next": "14.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "swr": "^2.2.5"
