Añado funcionalidad para cambiar avatar de los usuarios

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "server/index.mjs", "server/config.mjs"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "server/index.mjs", "server/config.mjs", "app/components/CambiarPerfil/ImageCropper.tsx", "app/setCanvasPreview.js"],
   "exclude": ["node_modules"]
 }
