--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
+    "react-image-crop": "^11.0.5",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "socket.io": "^4.7.5",
@@ -36,7 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
