COMMIT IMPORTANTE: añadido para actualizar usuarios, agregar usuarios, eliminar usuarios, checkbox totalmente funcional, también implementado busqueda de usuarios por searchbar y por último paginación

--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@hookform/resolvers": "^3.3.4",
     "@huggingface/inference": "^2.6.7",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "morgan": "^1.10.0",
     "next": "14.2.0",
+    "next-scroll-restorer": "^0.9.7",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-idle-timer": "^5.7.2",
     "react-image-crop": "^11.0.5",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
