--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "framer-motion": "^11.2.6",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "morgan": "^1.10.0",
@@ -28,6 +29,7 @@
     "react-image-crop": "^11.0.5",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
