--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
         "predis/predis": "^2.2",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "s-ichikawa/laravel-sendgrid-driver": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
