--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-image-crop": "^11.0.5",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "scrollreveal": "^4.0.9",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
@@ -43,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/scrollreveal": "^0.0.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.0",
     "postcss": "^8",
