--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "swr": "^2.2.5",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
